--- a/18-statefulset-topography/ss-web.yaml
+++ b/18-statefulset-topography/ss-web.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.9.1
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
           name: web
