--- a/18-statefulset-topography/svc.yaml
+++ b/18-statefulset-topography/svc.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: louhwz-nginxservice
   labels:
-    app: nginx
+    type: service
+    owner: nginx
 spec:
   ports:
   - port: 80
